Fix alignment of floating help text within filters popover

--- a/frontend/css/_filters.scss
+++ b/frontend/css/_filters.scss
@@ -39,4 +39,10 @@
       }
     }
   }
+
+  @include media-breakpoint-up(sm) {
+    .form-text.floating {
+      margin: 0;
+    }
+  }
 }
